k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prove-frontend
spec:
  selector:
    app: prove-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
