k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prove-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: example.com
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: prove-backend
                port:
                  number: 8000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prove-frontend
                port:
                  number: 80
